--- a/tools/tojs/cocos2dx_3d.ini
+++ b/tools/tojs/cocos2dx_3d.ini
@@ -39,7 +39,7 @@ classes_need_extend = Sprite3D
 
 skip = Skeleton3D::[create],
         Sprite3D::[getAABB getMeshArrayByName createAsync],
-        Mesh::[create getMeshCommand getAABB getDefaultGLProgram getMeshVertexAttribute],
+        Mesh::[create getMeshCommand getAABB getDefaultGLProgram getMeshVertexAttribute draw],
         Sprite3DCache::[addSprite3DData getSpriteData],
         Animation3D::[getBoneCurves],
         TextureCube::[setTexParameters],
