--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -261,8 +261,10 @@ if(USE_BULLET)
   endif()
   message(STATUS "Bullet include dirs: ${BULLET_INCLUDE_DIRS}")
   add_definitions(-DCC_ENABLE_BULLET_INTEGRATION=1)
+  add_definitions(-DCC_USE_PHYSICS=1)
 else()
   add_definitions(-DCC_ENABLE_BULLET_INTEGRATION=0)
+  add_definitions(-DCC_USE_3D_PHYSICS=0)
 endif(USE_BULLET)
 
 # Tinyxml2 (not prebuilded, exists as source)
