--- a/tools/tojs/cocos2dx_experimental.ini
+++ b/tools/tojs/cocos2dx_experimental.ini
@@ -1,11 +1,11 @@
-[cocos2dx_3d]
+[cocos2dx_experimental]
 # the prefix to be added to the generated functions. You might or might not use this in your own
 # templates
-prefix = cocos2dx_3d
+prefix = cocos2dx_experimental
 
 # create a target namespace (in javascript, this would create some code like the equiv. to `ns = ns || {}`)
 # all classes will be embedded in that namespace
-target_namespace = jsb
+target_namespace = ccexp
 
 android_headers = -I%(androidndkdir)s/platforms/android-14/arch-arm/usr/include -I%(androidndkdir)s/sources/cxx-stl/gnu-libstdc++/4.7/libs/armeabi-v7a/include -I%(androidndkdir)s/sources/cxx-stl/gnu-libstdc++/4.7/include -I%(androidndkdir)s/sources/cxx-stl/gnu-libstdc++/4.8/libs/armeabi-v7a/include -I%(androidndkdir)s/sources/cxx-stl/gnu-libstdc++/4.8/include
 android_flags = -D_SIZE_T_DEFINED_ 
@@ -13,7 +13,8 @@ android_flags = -D_SIZE_T_DEFINED_
 clang_headers = -I%(clangllvmdir)s/lib/clang/3.3/include 
 clang_flags = -nostdinc -x c++ -std=c++11 -U __SSE__
 
-cocos_headers = -I%(cocosdir)s/cocos -I%(cocosdir)s/cocos/platform/android -I%(cocosdir)s/external
+cocos_headers = -I%(cocosdir)s/cocos -I%(cocosdir)s/cocos/editor-support -I%(cocosdir)s/cocos/platform/android -I%(cocosdir)s/external
+
 cocos_flags = -DANDROID
 
 cxxgenerator_headers = 
@@ -22,13 +23,11 @@ cxxgenerator_headers =
 extra_arguments = %(android_headers)s %(clang_headers)s %(cxxgenerator_headers)s %(cocos_headers)s %(android_flags)s %(clang_flags)s %(cocos_flags)s %(extra_flags)s 
 
 # what headers to parse
-headers = %(cocosdir)s/cocos/cocos2d.h
+headers = %(cocosdir)s/cocos/2d/SpritePolygon.h
 
 # what classes to produce code for. You can use regular expressions here. When testing the regular
 # expression, it will be enclosed in "^$", like this: "^Menu*$".
-classes = Animate3D Sprite3D Animation3D Skeleton3D ^Mesh$ AttachNode BillBoard Sprite3DCache TextureCube Skybox Terrain
-
-classes_need_extend = Sprite3D
+classes = SpritePolygon
 
 # what should we skip? in the format ClassName::[function function]
 # ClassName is a regular expression, but will be used like this: "^ClassName$" functions are also
@@ -37,14 +36,7 @@ classes_need_extend = Sprite3D
 # will apply to all class names. This is a convenience wildcard to be able to skip similar named
 # functions from all classes.
 
-skip = Skeleton3D::[create],
-        Sprite3D::[getAABB getMeshArrayByName createAsync],
-        Mesh::[create getMeshCommand getAABB getDefaultGLProgram getMeshVertexAttribute draw],
-        Sprite3DCache::[addSprite3DData getSpriteData],
-        Animation3D::[getBoneCurves],
-        TextureCube::[setTexParameters],
-        Terrain::[getAABB getQuadTree create getHeightData]
-
+skip = SpritePolygon::[create initWithVerts initWithRect initWithPoly2tri initWithCache]
 
 rename_functions = 
 
@@ -57,11 +49,11 @@ remove_prefix =
 classes_have_no_parents = 
 
 # base classes which will be skipped when their sub-classes found them.
-base_classes_to_skip = Clonable Ref
+base_classes_to_skip =
 
 # classes that create no constructor
 # Set is special and we will use a hand-written constructor
-abstract_classes = Sprite3DCache
+abstract_classes =
 
 # Determining whether to use script object(js object) to control the lifecycle of native(cpp) object or the other way around. Supported values are 'yes' or 'no'.
 script_control_cpp = no
