fix lua and Android compile error

--- a/tools/tolua/cocos2dx.ini
+++ b/tools/tolua/cocos2dx.ini
@@ -51,7 +51,7 @@ skip = Node::[setGLServerState description getUserObject .*UserData getGLServerS
         LabelTextFormatProtocol::[*],
         .*Delegate::[*],
         PoolManager::[*],
-        Texture2D::[setTexParameters initWithData getPixelFormatInfoMap updateWithData initWithMipmaps],
+        Texture2D::[setTexParameters initWithData getPixelFormatInfoMap updateWithData initWithMipmaps (s|g)etNinePatchInfo],
         Set::[begin end acceptVisitor],
         IMEDispatcher::[*],
         SAXParser::[*],
