Upate cocos2dx_physics3d.ini and bindings-generator submodule

--- a/tools/tolua/cocos2dx_physics3d.ini
+++ b/tools/tolua/cocos2dx_physics3d.ini
@@ -15,6 +15,8 @@ android_flags = -D_SIZE_T_DEFINED_
 clang_headers = -I%(clangllvmdir)s/lib/clang/3.3/include 
 clang_flags = -nostdinc -x c++ -std=c++11 -D CC_ENABLE_BULLET_INTEGRATION
 
+win32_clang_flags = -U __SSE__
+
 cocos_headers = -I%(cocosdir)s/cocos -I%(cocosdir)s/cocos/platform/android -I%(cocosdir)s/external
 
 cocos_flags = -DANDROID
@@ -22,7 +24,7 @@ cocos_flags = -DANDROID
 cxxgenerator_headers = 
 
 # extra arguments for clang
-extra_arguments = %(android_headers)s %(clang_headers)s %(cxxgenerator_headers)s %(cocos_headers)s %(android_flags)s %(clang_flags)s %(cocos_flags)s %(extra_flags)s 
+extra_arguments = %(android_headers)s %(clang_headers)s %(cxxgenerator_headers)s %(cocos_headers)s %(android_flags)s %(clang_flags)s %(cocos_flags)s %(extra_flags)s
 
 # what headers to parse
 headers = %(cocosdir)s/cocos/physics3d/CCPhysics3D.h
