--- a/cocos/scripting/js-bindings/proj.win32/libjscocos2d.vcxproj.filters
+++ b/cocos/scripting/js-bindings/proj.win32/libjscocos2d.vcxproj.filters
@@ -146,6 +146,9 @@
     <ClCompile Include="..\manual\experimental\jsb_cocos2dx_experimental_manual.cpp">
       <Filter>manual\experimental</Filter>
     </ClCompile>
+    <ClCompile Include="..\auto\jsb_cocos2dx_physics3d_auto.cpp">
+      <Filter>auto</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\auto\jsb_cocos2dx_auto.hpp">
@@ -273,6 +276,9 @@
     </ClInclude>
     <ClInclude Include="..\manual\experimental\jsb_cocos2dx_experimental_manual.h">
       <Filter>manual\experimental</Filter>
+    </ClInclude>
+    <ClInclude Include="..\auto\jsb_cocos2dx_physics3d_auto.hpp">
+      <Filter>auto</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
