add physics3d js manual binding and tests

--- a/tools/tojs/cocos2dx.ini
+++ b/tools/tojs/cocos2dx.ini
@@ -11,7 +11,7 @@ android_headers = -I%(androidndkdir)s/platforms/android-14/arch-arm/usr/include 
 android_flags = -D_SIZE_T_DEFINED_
 
 clang_headers = -I%(clangllvmdir)s/lib/clang/3.3/include
-clang_flags = -nostdinc -x c++ -std=c++11 -U __SSE__
+clang_flags = -nostdinc -x c++ -std=c++11 -U __SSE__ -D CC_USE_3D_PHYSICS -D CC_ENABLE_BULLET_INTEGRATION
 
 cocos_headers = -I%(cocosdir)s/cocos -I%(cocosdir)s/cocos/platform/android -I%(cocosdir)s/external
 cocos_flags = -DANDROID
@@ -22,7 +22,7 @@ cxxgenerator_headers =
 extra_arguments = %(android_headers)s %(clang_headers)s %(cxxgenerator_headers)s %(cocos_headers)s %(android_flags)s %(clang_flags)s %(cocos_flags)s %(extra_flags)s
 
 # what headers to parse
-headers = %(cocosdir)s/cocos/cocos2d.h %(cocosdir)s/cocos/audio/include/SimpleAudioEngine.h %(cocosdir)s/cocos/2d/CCProtectedNode.h %(cocosdir)s/cocos/base/CCAsyncTaskPool.h %(cocosdir)s/cocos/2d/SpritePolygonCache.h
+headers = %(cocosdir)s/cocos/cocos2d.h %(cocosdir)s/cocos/audio/include/SimpleAudioEngine.h %(cocosdir)s/cocos/2d/CCProtectedNode.h %(cocosdir)s/cocos/base/CCAsyncTaskPool.h %(cocosdir)s/cocos/2d/SpritePolygonCache.h %(cocosdir)s/cocos/physics3d/CCPhysics3D.h
 
 # what classes to produce code for. You can use regular expressions here. When testing the regular
 # expression, it will be enclosed in "^$", like this: "^Menu*$".
@@ -121,7 +121,7 @@ skip = Node::[^setPosition$ setGLServerState description getUserObject .*UserDat
         Component::[serialize],
         EventListenerCustom::[init],
         EventListener::[init],
-        Scene::[getCameras getLights initWithPhysics createWithPhysics getPhysicsWorld getPhysics3DWorld setPhysics3DDebugCamera],
+        Scene::[getCameras getLights createWithPhysics getPhysicsWorld],
         Animate3D::[*],
         Sprite3D::[*],
         AttachNode::[*],
@@ -137,7 +137,8 @@ skip = Node::[^setPosition$ setGLServerState description getUserObject .*UserDat
         Camera::[unproject isVisibleInFrustum],
         ClippingNode::[init],
         SpritePolygonCache::[addSpritePolygonCache getSpritePolygonCache],
-        RenderState::[setStateBlock]
+        RenderState::[setStateBlock],
+        btActionInterface::[*]
 
 rename_functions = SpriteFrameCache::[addSpriteFramesWithFile=addSpriteFrames getSpriteFrameByName=getSpriteFrame],
     MenuItemFont::[setFontNameObj=setFontName setFontSizeObj=setFontSize getFontSizeObj=getFontSize getFontNameObj=getFontName],
