--- a/tools/tojs/cocos2dx_physics3d.ini
+++ b/tools/tojs/cocos2dx_physics3d.ini
@@ -36,10 +36,12 @@ classes = Physics3DWorld Physics3DShape PhysicsSprite3D Physics3DObject Physics3
 # will apply to all class names. This is a convenience wildcard to be able to skip similar named
 # functions from all classes.
 
-skip = Physics3DShape::[createCompoundShape],
+skip = Physics3DShape::[createCompoundShape createMesh createHeightfield],
        Physics3DObject::[setCollisionCallback],
        Physics3DWorld::[getPhysicsObjects],
-       Physics3DConeTwistConstraint::[setMotorTarget setMotorTargetInConstraintSpace]
+       Physics3DConeTwistConstraint::[setMotorTarget setMotorTargetInConstraintSpace],
+       PhysicsSprite3D::[create],
+       Physics3DRigidBody::[create]
 
 rename_functions = 
 
