--- a/tools/tojs/cocos2dx_physics3d.ini
+++ b/tools/tojs/cocos2dx_physics3d.ini
@@ -11,7 +11,7 @@ android_headers = -I%(androidndkdir)s/platforms/android-14/arch-arm/usr/include 
 android_flags = -D_SIZE_T_DEFINED_ 
 
 clang_headers = -I%(clangllvmdir)s/lib/clang/3.3/include 
-clang_flags = -nostdinc -x c++ -std=c++11 -D CC_ENABLE_BULLET_INTEGRATION -D CC_USE_3D_PHYSICS -U __SSE__
+clang_flags = -nostdinc -x c++ -std=c++11 -D CC_ENABLE_BULLET_INTEGRATION -D CC_USE_3D_PHYSICS
 
 cocos_headers = -I%(cocosdir)s/cocos -I%(cocosdir)s/cocos/platform/android -I%(cocosdir)s/external
 
