--- a/tools/tojs/cocos2dx_physics3d.ini
+++ b/tools/tojs/cocos2dx_physics3d.ini
@@ -13,6 +13,8 @@ android_flags = -D_SIZE_T_DEFINED_
 clang_headers = -I%(clangllvmdir)s/lib/clang/3.3/include 
 clang_flags = -nostdinc -x c++ -std=c++11 -D CC_ENABLE_BULLET_INTEGRATION -D CC_USE_3D_PHYSICS
 
+win32_clang_flags = -U __SSE__
+
 cocos_headers = -I%(cocosdir)s/cocos -I%(cocosdir)s/cocos/platform/android -I%(cocosdir)s/external
 
 cocos_flags = -DANDROID
