Add windowActionModeOverlay style to main activity and fixes #14401.

--- a/templates/cpp-template-default/proj.android-studio/app/AndroidManifest.xml
+++ b/templates/cpp-template-default/proj.android-studio/app/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:screenOrientation="landscape"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+            android:theme="@style/Theme.Black.NoTitleBar.ActionModeOverlay" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
