--- a/templates/lua-template-default/frameworks/runtime-src/proj.android/AndroidManifest.xml
+++ b/templates/lua-template-default/frameworks/runtime-src/proj.android/AndroidManifest.xml
@@ -18,7 +18,7 @@
         <activity android:name="org.cocos2dx.lua.AppActivity"
                   android:label="@string/app_name"
                   android:screenOrientation="landscape"
-                  android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+                  android:theme="@style/Theme.Black.NoTitleBar.ActionModeOverlay"
                   android:configChanges="orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
