--- a/templates/cpp-template-default/proj.android/AndroidManifest.xml
+++ b/templates/cpp-template-default/proj.android/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
     <application android:label="@string/app_name"
                  android:icon="@drawable/icon">
-					 
+
         <!-- Tell Cocos2dxActivity the name of our .so -->
         <meta-data android:name="android.app.lib_name"
 	              android:value="cocos2dcpp" />
@@ -18,7 +18,7 @@
         <activity android:name="org.cocos2dx.cpp.AppActivity"
                   android:label="@string/app_name"
                   android:screenOrientation="landscape"
-                  android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+                  android:theme="@style/Theme.Black.NoTitleBar.ActionModeOverlay"
                   android:configChanges="orientation|keyboardHidden|screenSize">
 
             <intent-filter>
@@ -35,4 +35,4 @@
                       android:xlargeScreens="true"/>
 
     <uses-permission android:name="android.permission.INTERNET"/>
-</manifest> 
+</manifest>
