--- a/templates/js-template-runtime/frameworks/runtime-src/proj.android/AndroidManifest.xml
+++ b/templates/js-template-runtime/frameworks/runtime-src/proj.android/AndroidManifest.xml
@@ -17,7 +17,7 @@
         <activity android:name="org.cocos2dx.javascript.AppActivity"
                   android:label="@string/app_name"
                   android:screenOrientation="landscape"
-                  android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+                  android:theme="@style/Theme.Black.NoTitleBar.ActionModeOverlay"
                   android:configChanges="orientation">
 
             <intent-filter>
