--- a/cocos/base/CMakeLists.txt
+++ b/cocos/base/CMakeLists.txt
@@ -66,6 +66,9 @@ set(COCOS_BASE_SRC
   base/etc1.cpp
   base/pvr.cpp
   base/s3tc.cpp
+  base/etc2.cpp
+  base/etc2unpack.cpp
+  base/etcdec.cxx
   ${COCOS_BASE_SPECIFIC_SRC}
 
 )
