not export Sprite3DMaterial::setTexture

--- a/tools/tojs/cocos2dx_3d.ini
+++ b/tools/tojs/cocos2dx_3d.ini
@@ -47,7 +47,8 @@ skip = Skeleton3D::[create],
         Animate3D::[getKeyFrameUserInfo],
         TextureCube::[setTexParameters],
         Terrain::[getAABB getQuadTree create getHeightData],
-        Bundle3D::[getTrianglesList calculateAABB]
+        Bundle3D::[getTrianglesList calculateAABB],
+        Sprite3DMaterial::[setTexture]
 
 
 rename_functions = 
