--- a/tools/tolua/cocos2dx_3d.ini
+++ b/tools/tolua/cocos2dx_3d.ini
@@ -43,10 +43,11 @@ skip = Mesh::[create getAABB getVertexBuffer hasVertexAttrib getSkin getMeshInde
        BillBoard::[draw],
        Sprite3DCache::[addSprite3DData getSpriteData],
        Terrain::[lookForIndicesLODSkrit lookForIndicesLOD insertIndicesLOD insertIndicesLODSkirt getIntersectionPoint getAABB getQuadTree create ^getHeight$],
-       Bundle3D::[calculateAABB loadMeshDatas getTrianglesList loadObj]
+       Bundle3D::[calculateAABB loadMeshDatas getTrianglesList loadObj],
+       Sprite3DMaterial::[setTexture]
 
 
-rename_functions = 
+rename_functions =
 
 rename_classes = 
 
